welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
peindre()
}


def peindre() {
 var T = new Array[Color](getMondeHauteur())
	for (i <- 1 to getMondeHauteur())
	 {T(i) = getCouleurSol()
	 avance()}
	 avance(); gauche();avance();droite()
	 for (i <- 1 to (getMondeHauteur()))
	  { avance()
	  SetCouleurBrosse(T(i));baisseBrosse(); leveBrosse()}
}

def poserCouleur() {
	
}
